# minigrep

./: Cargo.toml  Makefile  poem.txt
src/: lib.rs  main.rs
